--- a/src/templates/forms/forms.html
+++ b/src/templates/forms/forms.html
@@ -273,6 +273,7 @@
         } else {
             document.querySelector("#search-box").disabled = true;
             document.querySelector("#search-btn").disabled = true;
+            return;
         }
 
         if (v === '58' || v === '69') {
