Add supplier field on deliveries

--- a/src/static/style_table.css
+++ b/src/static/style_table.css
@@ -123,7 +123,7 @@
 }
 
 .selection-table.delivery .table-row {
-    grid-template-columns: 0.625fr 0.75fr 0.7fr 2fr 0.5fr 0.75fr 0.5fr 0.75fr 0.75fr 0.5fr 3rem;
+    grid-template-columns: 0.625fr 0.75fr 0.7fr 1.5fr 0.5fr 0.75fr 0.5fr 0.75fr 0.5fr 3rem;
 }
 
 .selection-table.users .table-row {
