--- a/src/templates/deliveries/deliveries.html
+++ b/src/templates/deliveries/deliveries.html
@@ -52,10 +52,10 @@
                     </button>
                 </div>
                 <div>Delivery Date</div>
-                <div>Source</div>
+                <div>Source of Fund</div>
                 <div class="table-sortable">
                     <button role="button" class="sort-btn">
-                        Received By
+                        Supplier
                         <i class="bi bi-chevron-expand"></i>
                     </button>
                 </div>
