--- a/src/templates/inventory/request.html
+++ b/src/templates/inventory/request.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="table-wrapper">
-    <div class="table-main search-table">
+    <div class="table-main search-table {{ 'custodian' if session['user']['RoleID'] == 1 else 'user' }}">
         <div class="table-header">
             <div class="table-row">
                 <div class="table-sortable">
@@ -44,7 +44,9 @@
                     </button>
                 </div>
                 <div>Unit Price</div>
+                {% if session['user']['RoleID'] == 1 %}
                 <div>Available Stock</div>
+                {% endif %}
                 <div>Unit</div>
                 <div></div>
             </div>
@@ -97,7 +99,9 @@
                     </button>
                 </div>
                 <div>Unit Price</div>
+                {% if session['user']['RoleID'] == 1 %}
                 <div>Available Stock</div>
+                {% endif %}
                 <div>Unit</div>
                 <div>Request Quantity</div>
                 <div></div>
