--- a/src/templates/requests/requests.html
+++ b/src/templates/requests/requests.html
@@ -49,7 +49,7 @@
 </div>
 
 <div class="table-wrapper">
-    <div class="table-main request-table {{ 'custodian' if session['user']['RoleID'] == 1 else 'user' }}">
+    <div class="table-main request-table {{ 'custodian' if session['user']['RoleID'] != 0 else 'user' }}">
         <div class="table-header">
             <div class="table-row">
                 <div class="table-sortable">
@@ -85,7 +85,8 @@
                 <div>Unit</div>
                 {% if session['user']['RoleID'] == 1 %}
                     <div style="grid-column: -1 / -3;">Actions</div>
-                {% else %}
+                {% endif %}
+                {% if session['user']['RoleID'] == 2 %}
                     <div>Actions</div>
                 {% endif %}
             </div>
