--- a/src/templates/inventory/request.html
+++ b/src/templates/inventory/request.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="table-wrapper">
-    <div class="table-main search-table {{ 'custodian' if session['user']['RoleID'] == 1 else 'user' }}">
+    <div class="table-main search-table {{ 'custodian' if session['user']['RoleID'] != 2 else 'user' }}">
         <div class="table-header">
             <div class="table-row">
                 <div class="table-sortable">
@@ -44,7 +44,7 @@
                     </button>
                 </div>
                 <div>Unit Price</div>
-                {% if session['user']['RoleID'] == 1 %}
+                {% if session['user']['RoleID'] != 2 %}
                 <div>Available Stock</div>
                 {% endif %}
                 <div>Unit</div>
@@ -66,7 +66,7 @@
 </div>
 
 <div class="table-wrapper">
-    <div class="table-main selection-table request">
+    <div class="table-main selection-table request {{ 'user' if session['user']['RoleID'] == 2 else '' }}">
         <div class="table-header">
             <div class="table-row">
                 <div class="table-sortable">
@@ -99,7 +99,7 @@
                     </button>
                 </div>
                 <div>Unit Price</div>
-                {% if session['user']['RoleID'] == 1 %}
+                {% if session['user']['RoleID'] != 2 %}
                 <div>Available Stock</div>
                 {% endif %}
                 <div>Unit</div>
