--- a/src/static/style_table.css
+++ b/src/static/style_table.css
@@ -143,7 +143,7 @@
 }
 
 .delivery-table .table-row {
-    grid-template-columns: 0.375fr 0.625fr 0.75fr 2fr 0.5fr 0.75fr 0.5fr 0.75fr 0.75fr 0.75fr 0.5fr;
+    grid-template-columns: 0.375fr 0.625fr 0.75fr 0.75fr 1.5fr 0.5fr 0.75fr 0.5fr 0.75fr 0.75fr 0.75fr 0.5fr;
 }
 
 .request-table.custodian .table-row {
