--- a/src/templates/deliveries/deliveries.html
+++ b/src/templates/deliveries/deliveries.html
@@ -33,6 +33,7 @@
                         <i class="bi bi-chevron-expand"></i>
                     </button>
                 </div>
+                <div>Category</div>
                 <div class="table-sortable">
                     <button role="button" class="sort-btn">
                         Description
