--- a/src/templates/deliveries/deliveries.html
+++ b/src/templates/deliveries/deliveries.html
@@ -42,6 +42,7 @@
                 </div>
                 <div>Delivery Quantity</div>
                 <div>Unit</div>
+                <div>Unit Price</div>
                 <div class="table-sortable">
                     <button role="button" class="sort-btn">
                         <span>
