--- a/src/static/style_table.css
+++ b/src/static/style_table.css
@@ -77,7 +77,7 @@
 }
 
 .add-table .table-row {
-    grid-template-columns: 0.625fr 0.75fr 0.70fr 2fr 1fr 0.75fr 0.5fr 3rem;
+    grid-template-columns: 0.625fr 0.75fr 0.70fr 2fr 1fr 0.5fr 3rem;
 }
 
 .add-table.users .table-row {
@@ -135,7 +135,7 @@
 }
 
 .selection-table.delivery .table-row {
-    grid-template-columns: 0.625fr 0.75fr 0.7fr 1.5fr 0.5fr 0.75fr 0.5fr 0.75fr 0.5fr 3rem;
+    grid-template-columns: 0.625fr 0.75fr 0.7fr 1.5fr 0.75fr 0.75fr 0.75fr 0.75fr 0.5fr 3rem;
 }
 
 .selection-table.users .table-row {
@@ -143,7 +143,7 @@
 }
 
 .delivery-table .table-row {
-    grid-template-columns: 0.375fr 0.625fr 0.75fr 0.75fr 1.5fr 0.5fr 0.75fr 0.5fr 0.75fr 0.75fr 0.75fr 0.5fr;
+    grid-template-columns: 0.375fr 0.625fr 0.75fr 0.75fr 1.5fr 0.5fr 0.75fr 0.75fr 0.5fr 0.75fr 0.75fr 0.75fr 0.5fr;
 }
 
 .request-table.custodian .table-row {
