--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -93,13 +93,16 @@
 
                 {% if session['user']['RoleID'] == 1 %}
                     <a class="link {{ 'active' if active == 'deliveries' }}" href="{{ url_for('bp_delivery.deliveries') }}">Deliveries</a>
-                    <a class="link {{ 'active' if active == 'forms' }}" href="{{ url_for('bp_form.forms') }}">Forms</a>
                 {% endif %}
 
                 <a class="link {{ 'active' if active == 'requests' }}" href="{{ url_for('bp_request.requests') }}">{{ 'My' if session['user']['RoleID'] == 2 else 'Item' }} Requests</a>
-
+                
                 {% if session['user']['RoleID'] == 0 %}
                     <a class="link {{ 'active' if active == 'users' }}" href="{{ url_for('bp_user.show_users') }}">Users</a>
+                {% endif %}
+
+                {% if session['user']['RoleID'] == 1 %}
+                <a class="link {{ 'active' if active == 'forms' }}" href="{{ url_for('bp_form.forms') }}">Forms</a>
                 {% endif %}
                 
                 <a class="link logout" href="{{ url_for('bp_auth.logout') }}">Log out</a>
