--- a/src/templates/inventory/remove.html
+++ b/src/templates/inventory/remove.html
@@ -3,10 +3,10 @@
 {% block main %}
 
 <div id="content-top">
-    <h1 class="main-header">Item Removal</h1>
+    <h1 class="main-header">Item Disposal</h1>
 
     <form id="search">
-        <input type="search" id="search-box" placeholder="Search item&hellip;" name="keyword">
+        <input type="search" id="search-box" placeholder="Search delivery&hellip;" name="keyword">
         <input type="submit" id="search-btn" value="Search" name="search-btn">
     </form>
 </div>
@@ -15,6 +15,12 @@
     <div class="table-main search-table {{ 'custodian' if session['user']['RoleID'] == 1 else 'user' }}">
         <div class="table-header">
             <div class="table-row">
+                <div class="table-sortable">
+                    <button role="button" class="sort-btn">
+                        DID
+                        <i class="bi bi-chevron-expand"></i>
+                    </button>
+                </div>
                 <div class="table-sortable">
                     <button role="button" class="sort-btn">
                         Item ID
@@ -34,6 +40,9 @@
                         <i class="bi bi-chevron-expand"></i>
                     </button>
                 </div>
+                <div>Available Unit</div>
+                <div>Unit</div>
+                <div>Unit Price</div>
                 <div class="table-sortable">
                     <button role="button" class="sort-btn">
                         <span>
@@ -44,10 +53,19 @@
                         <i class="bi bi-chevron-expand"></i>
                     </button>
                 </div>
-                <div>Unit Price</div>
-                <div>Available Stock</div>
-                <div>Unit</div>
-                <div></div>
+                <div>Delivery Date</div>
+                <div class="table-sortable">
+                    <button role="button" class="sort-btn">
+                        Source of Fund
+                        <i class="bi bi-chevron-expand"></i>
+                    </button>
+                </div>
+                <div class="table-sortable">
+                    <button role="button" class="sort-btn">
+                        Supplier
+                        <i class="bi bi-chevron-expand"></i>
+                    </button>
+                </div>
             </div>
         </div>
         <div class="table-body">
@@ -55,7 +73,7 @@
                 <div>Please wait&hellip;</div>
             </div>
             <div class="table-row table-empty hide">
-                <div>No items found.</div>
+                <div>No deliveries found.</div>
             </div>
             <div class="table-error table-row hide">
                 <div>An error occurred in the database. Please try again later.</div>
@@ -68,39 +86,14 @@
     <div class="table-main selection-table remove">
         <div class="table-header">
             <div class="table-row">
-                <div class="table-sortable">
-                    <button role="button" class="sort-btn">
-                        Item ID
-                        <i class="bi bi-chevron-expand"></i>
-                    </button>
-                </div>
-                <div class="table-sortable">
-                    <button role="button" class="sort-btn">
-                        Name
-                        <i class="bi bi-chevron-expand"></i>
-                    </button>
-                </div>
+                <div>DID</div>
+                <div>Item ID</div>
+                <div>Name</div>
                 <div>Category</div>
-                <div class="table-sortable">
-                    <button role="button" class="sort-btn">
-                        Description
-                        <i class="bi bi-chevron-expand"></i>
-                    </button>
-                </div>
-                <div class="table-sortable">
-                    <button role="button" class="sort-btn">
-                        <span>
-                            Shelf Life
-                            <br>
-                            <span style="font-weight: initial; font-style: italic; font-size: 80%;">(days)</span>
-                        </span>
-                        <i class="bi bi-chevron-expand"></i>
-                    </button>
-                </div>
-                <div>Unit Price</div>
-                <div>Available Stock</div>
-                <div>Unit</div>
-                <div></div>
+                <div>Description</div>
+                <div>Available Unit</div>
+                <div>Number of units to dispose</div>
+                <div>Remarks</div>
             </div>
         </div>
         <div class="table-body"> </div>
@@ -110,7 +103,7 @@
 <div class="form-bottom">
     <span class="form-msg"></span>
     <form id="submit-form">
-        <input type="submit" class="btn-red" value="Remove selected items" disabled>
+        <input type="submit" class="btn-red" value="Dispose selected items" disabled>
     </form>
 </div>
 
@@ -148,6 +141,28 @@
         let b = document.querySelector(".selection-table .table-body");
         b.insertBefore(clone, b.firstChild);
         row.lastChild.querySelector("button").disabled = true;
+
+        for(let a = 0; a < 6; a++){
+            clone.removeChild(clone.children[6]);
+        }
+
+        let a = document.createElement('div');
+        let num = document.createElement('input');
+        num.type = "number";
+        num.min = 1;
+        num.max = +clone.children[5].innerHTML;
+        num.addEventListener("input", enableSubmit)
+        a.appendChild(num);
+        clone.insertBefore(a, clone.lastChild);
+
+        let aa = document.createElement('div');
+        let remark = document.createElement('input');
+        remark.type = "text";
+        remark.maxLength = 70;
+        remark.addEventListener("input", enableSubmit)
+        aa.appendChild(remark);
+        clone.insertBefore(aa, clone.lastChild);
+
         enableSubmit();
     }
 
@@ -159,19 +174,19 @@
     }
 
     function enableSubmit () {
-        document.querySelector("#submit-form [type=submit]").disabled = document.querySelector(".selection-table .table-body").childElementCount === 0;
+        document.querySelector("#submit-form [type=submit]").disabled = document.querySelector(".selection-table .table-body").childElementCount === 0 || Array.from(document.querySelectorAll(".selection-table input")).some(x => !x.checkValidity()) || Array.from(document.querySelectorAll(".selection-table input")).some(x => x.value === '');
     }
 
     document.querySelector("#search").addEventListener("submit", async e => {
         e.preventDefault();
 
-        for (let row of await populateItems(document.querySelector(".search-table .table-body"), document.querySelector("#search-box").value, { buttons: true })) {
+        for (let row of await populateDeliveries(document.querySelector(".search-table .table-body"), document.querySelector("#search-box").value, { buttons: true, dispose: true })) {
             row.querySelector(".select-row").addEventListener("click", () => selectItem(row));
         }
     });
 
     window.addEventListener("load", async () => {
-        for (let row of await populateItems(document.querySelector(".search-table .table-body"), "", { buttons: true })) {
+        for (let row of await populateDeliveries(document.querySelector(".search-table .table-body"), "", { buttons: true, dispose: true })) {
             row.querySelector(".select-row").addEventListener("click", () => selectItem(row));
         }
     });
@@ -194,12 +209,20 @@
         document.querySelector(".form-bottom .form-msg").innerText = "Please wait\u2026";
         document.querySelector(".form-bottom .form-msg").classList.remove("error");
 
-        fetch("{{ url_for('bp_inventory.remove_items') }}", {
+        fetch("{{ url_for('bp_inventory.dispose_items') }}", {
             "method": "POST",
             "headers": {
                 "Content-Type": "application/json"
             },
-            "body": JSON.stringify({ "items": Array.from(document.querySelectorAll(".selection-table .table-body .table-row > :first-child")).map(x => x.innerHTML) })
+            "body": JSON.stringify({ "items": Array.from(document.querySelectorAll(".selection-table .table-body .table-row")).map(x => {
+                    return {
+                        "DeliveryID": x.children[0].innerHTML,
+                        "ItemID": x.children[1].innerHTML,
+                        "ToDispose": x.children[6].firstChild.value,
+                        "Remarks": x.children[7].firstChild.value,
+                    }
+                }) 
+            })
         }).then(async d => {
             if (d.status === 200) window.location = "{{ url_for('bp_inventory.inventory') }}";
             if (d.status === 500) {
